Implemented new API/Action: get permissions for role
