# src/schemas/http-api/roles.ts
@@ -1,0 +1,11 @@
+export type HTTPAPIPermissionRecord = {
+  resource: string;
+  operation: string;
+  description: string;
+}
+
+export type HTTPAPIRoleRecord = {
+  id: string;
+  name: string;
+  description: string;
+}
